modif CORS, securityConfig pour swagger